name:                parser-tutorial
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/michaeljklein/parser-tutorial#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2017 Michael Klein
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tutorial
                     , Test.Tutorial
  build-depends:       base >= 4.7 && < 5
                     , QuickCheck
                     , checkers
  default-language:    Haskell2010

executable test
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:       base >= 4.7 && < 5
                     , parser-tutorial
  default-language:    Haskell2010


test-suite test-parser-tutorial
  type:                detailed-0.9
  hs-source-dirs:      test
  test-module:         Spec
  build-depends:       base >= 4.7 && < 5
                     , Cabal >= 1.9.2
                     , QuickCheck
                     , cabal-test-quickcheck
                     , checkers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaeljklein/parser-tutorial
